# disparity-evaluation

./: .gitignore  README.md  aggregate-results.py  aggregate-runtime.py  build.sh  calculate-mean-of-algorithms.py  clean.sh  convert-cambridge-dataset.py  create-datasets-with-gaussian-noise.py  create-datasets-with-video-compression.py  eval-chain.py  eval-chain.sh  evaluate-datasets.py  fix-missing-saliency-maps.py  generate-disparity-maps.py  generate-maps-with-simple-stereo-matcher.py  generate-masks.py
1_DisparityAlgorithm/: CMakeLists.txt  README.md  local.ini
1_DisparityAlgorithm/src/: Constants.cpp  Constants.hpp  DisparityAlgorithm.hpp  Frame.hpp  MRFStereo.cpp  MRFStereo.hpp  OpenCVStereoBM.cpp  OpenCVStereoBM.hpp  OpenCVStereoSGBM.cpp  OpenCVStereoSGBM.hpp  Utils.cpp  Utils.hpp  main.cpp
1_DisparityAlgorithm/src/algorithms/: DisparityAlgorithm.hpp  ELASAlgorithm.cpp  ELASAlgorithm.hpp  MRFStereo.cpp  MRFStereo.hpp  OpenCVStereoBM.cpp  OpenCVStereoBM.hpp  OpenCVStereoSGBM.cpp  OpenCVStereoSGBM.hpp
1_DisparityAlgorithm/src/algorithms/opencv/: OpenCVSimpleStereoBM.hpp  OpenCVStereoBM.hpp  OpenCVStereoMatcher.hpp  OpenCVStereoSGBM.hpp
1_DisparityAlgorithm/src/common/: Configuration.hpp  Constants.cpp  Constants.hpp  Local.cpp  Local.hpp  LocalConfig.cpp  LocalConfig.hpp  PfmReader.cpp  PfmReader.hpp  Properties.cpp  Properties.hpp
2_BitmaskCreator/: CMakeLists.txt  README.md
2_BitmaskCreator/src/: Bitmask.cpp  Bitmask.hpp  BitmaskCreator.cpp  BitmaskCreator.hpp  Constants.hpp  Utils.cpp  Utils.hpp  main.cpp
2_BitmaskCreator/src/common/: Configuration.hpp  Constants.cpp  Constants.hpp
2_MaskCreator/: CMakeLists.txt  README.md
2_MaskCreator/src/: MaskCreator.cpp  MaskCreator.hpp  main.cpp
2_MaskCreator/src/common/: Configuration.hpp  Constants.cpp
3_DisparityEvaluation/: CMakeLists.txt  README.md
3_DisparityEvaluation/src/: Heatmap.cpp  Heatmap.hpp  Metrics.cpp  Metrics.hpp  main.cpp
3_DisparityEvaluation/src/common/: Configuration.hpp  Constants.cpp  Constants.hpp  Utils.cpp  Utils.hpp
3_DisparityRefinement/: README.md
4_DisparityRefinement/: README.md
4_NaiveImplementation/: CMakeLists.txt  README.md
4_NaiveImplementation/src/: Configuration.hpp  SimpleStereoMatcher.cpp  SimpleStereoMatcher.hpp  StereoMatcher.cpp  StereoMatcher.hpp  main.cpp
5_ImageDiminisher/: CMakeLists.txt
5_ImageDiminisher/src/: Configuration.hpp  main.cpp
6_WebViewer/: app.js  package.json
6_WebViewer/lib/app/: config.js  renderer.js  routes.js
6_WebViewer/lib/common/: csv.js  utils.js
6_WebViewer/lib/controllers/: index.js  list.js  result.js
6_WebViewer/public/css/: custom.css
6_WebViewer/public/js/: client-web-app.js
6_WebViewer/views/: index.ect  index_list_row.ect  layout.ect  result_detail.ect  result_list.ect  result_list_row.ect
